better control over video generation (H264, qr)