@@ -412,7 +412,7 @@ public class Wizard extends AbstractDialog implements ActionListener, KeyListene
 		dialog.getContentPane().add(new Wizard(dialog));
 		dialog.pack();
 		final Dimension size = Toolkit.getDefaultToolkit().getScreenSize();
-		dialog.setLocation(new Double(size.getWidth()/2 - dialog.getWidth()/2).intValue(), new Double(size.getHeight()/2 - dialog.getHeight()/2).intValue());
+		dialog.setLocation(Double.valueOf(size.getWidth()/2 - dialog.getWidth()/2).intValue(), Double.valueOf(size.getHeight()/2 - dialog.getHeight()/2).intValue());
 		SwingUtilities.invokeLater(() -> dialog.setVisible(true));
 	}
 
